# fork-kimi-cli

./: CHANGELOG.md  README.md  pyproject.toml
learning/aiohttp_examples/: aiohttp_001.py  aiohttp_002.py
learning/contextvars_examples/: ContextVar.py
learning/getpass_examples/: getuser.py
learning/prompt_toolkit_examples/: FuzzyCompleter.py  InMemoryHistory.py  KeyBindings.py  PromptSession.py  WordCompleter.py  merge_completers.py
learning/rich_examples/: Panel.py  Spinner.py
learning/time_examples/: monotonic.py
src/kimi_cli/: agentspec.py  app.py  config.py  exception.py  llm.py  metadata.py  session.py  share.py  skill.py
src/kimi_cli/cli/: __init__.py  mcp.py
src/kimi_cli/soul/: __init__.py  agent.py  approval.py  compaction.py  context.py  denwarenji.py  kimisoul.py  message.py  slash.py  toolset.py
src/kimi_cli/ui/shell/: __init__.py  prompt.py  replay.py  slash.py  visualize.py
src/kimi_cli/utils/: broadcast.py  clipboard.py  frontmatter.py  message.py  path.py  signals.py  slashcmd.py  string.py  term.py  typing.py
src/kimi_cli/wire/: __init__.py  message.py  serde.py
